fix: Move P1 score background to show border in gap
- Adjust #p1ScoreBG left from 0 to 2px
- Black border now visible in gap on P1 side

--- a/_overlays/css/style.scss
+++ b/_overlays/css/style.scss
@@ -157,6 +157,7 @@ body {
 
   #p1ScoreBG {
     background-color: $p1-accent;
+    left: 2px;
     transform: skewX(20deg);
   }
 
